<resources>
    <string name="app_name">DustpanWorld</string>
    <string name="phone_number">手机号码</string>
    <string name="tv_password">密码</string>
    <string name="tv_phone">手机</string>
    <string name="todo">TODO </string>
    <string name="bt_register">点我注册</string>
    <string name="bt_forget">忘记密码</string>
    <string name="bt_account">已经拥有账号？返回登录</string>
    <string name="bt_login">登录</string>
    <string name="bt_verify">使用验证码登录</string>
    <string name="pls_password">请输入密码</string>
    <string name="pls_phone">请输入手机号码</string>
    <string name="workname">簸箕画世界</string>
    <string name="Addperson_name">收件人姓名</string>
    <string name="Addperson_phone">收件人手机号码</string>
    <string name="Addperson_area">所在地区</string>
    <string name="Addperson_adress">详细地址</string>

</resources>