<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--    顶部导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#FFB600">

        <ImageButton
            android:id="@+id/message_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="#FFB600"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- 内容部分!-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="96"
        android:orientation="vertical">

        <!--图片部分!-->
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="361dp"
            android:layout_height="148dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <!--文本部分!-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/tv_phone"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_phone"
                android:layout_alignStart="@+id/tv_phone"
                android:layout_marginTop="8dp"
                android:autofillHints="手机号码"
                android:background="@drawable/ed_status"
                android:hint="@string/pls_phone"
                android:importantForAutofill="yes"
                android:inputType="phone"
                android:maxLength="11"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_phone"
                android:layout_alignStart="@+id/ed_phone"
                android:layout_marginTop="20dp"
                android:text="@string/tv_password"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_password"
                android:layout_alignStart="@+id/tv_password"
                android:layout_marginTop="8dp"
                android:autofillHints="密码"
                android:background="@drawable/ed_status"
                android:hint="@string/pls_password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/tv_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_password"
                android:layout_alignStart="@+id/ed_password"
                android:layout_marginTop="20dp"
                android:text="确认密码"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/ed_password2"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_password2"
                android:layout_alignStart="@+id/tv_password2"
                android:layout_marginTop="8dp"
                android:autofillHints="确认密码"
                android:background="@drawable/ed_status"
                android:hint="请再次输入密码"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:textColorHint="@color/colorGray" />

            <Button
                android:id="@+id/bt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_password2"
                android:layout_alignStart="@id/ed_password2"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/bt_forget"
                android:textColor="#8F8F8F"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bt_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_password2"
                android:layout_alignEnd="@+id/ed_password2"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/bt_verify"
                android:textColor="#8F8F8F"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="295dp"
                android:layout_height="45dp"
                android:layout_below="@+id/bt_forget"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_shape"
                android:text="@string/bt_login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="295dp"
                android:layout_height="45dp"
                android:layout_below="@+id/bt_login"
                android:layout_alignStart="@+id/bt_login"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_register"
                android:text="@string/bt_register" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
